src/sass/pages/_global.scss
@import "../utils/variables";
@import "../utils/mixins";
@import "../layout/flex";
@import "../components/social";

// mixins
@mixin active-link {
    &::before {
        content: "";
        background: $secondary;
        position: absolute;
        width: 100%;
        height: 2px;
        bottom: -10px;
    }
}

// global
* {
    @include reset();
}
.title {
    font-weight: 500;
    background: url("../dist/images/title.png");
    width: 200px;
    height: 90px;
    position: relative;
    color: $white;
    font-family: $title;
    h2 {
        text-align: center;
        @include center(y, relative);
    }
}
.heading {
    font-weight: 600 !important;
    letter-spacing: 1px !important;
}
.section-wrap {
    @include flex-x(center);
    flex-direction: column;
    padding-top: 30px;
    @include media-query-mobile(1024px) {
        flex-direction: row;
    }
}
.container {
    @include container(small);
    @include media-query-mobile(768px) {
        @include container(medium);
    }
    @include media-query-mobile(1200px) {
        @include container(large);
    }
}
.paint-stroke {
    @include center(x, absolute);
    top: -30px;
}
.description {
    @include flex-x(start);
    flex-direction: column;
    h2 {
        font-size: 1.625rem;
    }
    h1 {
        font-size: 2.9375rem;
        line-height: 1.3;
        font-family: $title;
        color: $dark;
        padding-bottom: 30px;
    }
    p {
        font-family: $text;
        line-height: 1.85;
        color: #797979;
    }
}
.section {
    padding: 5rem 0 2rem 0;
}
.active {
    @include active-link();
}
.back-to-top {
    position: fixed;
    z-index: 5;
    right: -38px;
    top: 90%;
    width: 38px;
    height: 38px;
    background: $primary;
    color: $white;
    transition: 0.5s all;
    border-radius: 50%;
    -webkit-box-shadow: 2px 2px 3px rgba(146,146,146,.3);
    box-shadow: 2px 2px 3px rgba(146,146,146,.3);
    &:hover {
        background: $dark;
    }
    i {
        position: relative;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
    }
}
.tint {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
}
.burger {
    position: relative;
    left: 5%;
}

// header nav
.mobile-nav {
    width: 236px;
    position: fixed;
    top: 0;
    bottom: 0;
    right: -236px;
    transition: 0.5s all;
    border-left: 1px solid $light;
    background: $white;
    z-index: 3;
    @include media-query-mobile(1024px) {
        display: none;
    }
    ul:first-child {
        margin-top: 73px;
        li {
            a {
                color: $black;
                padding: 14px 30px;
                margin: 3px 0;
                display: block;
                font-family: $title;
                font-size: 15px;
                transition: 0.3s all;
                letter-spacing: 2px;
            }
            a:hover {
                text-decoration: none !important;
                color: $primary;
            }
        }
        .mobile-menu-active {
            a {
                color: $primary;
            }
        }
    }
    ul:nth-child(2) {
        margin: 10px 30px;
        li {
            @include social(28px, $secondary);
            i {
                font-size: .875rem;
                color: $white;
            }
        }
        li:hover {
            background: $black;
        }
    }
}
header {
    background: $white;
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    z-index: 3;
    transition: 0.5s all;
    @include media-query-mobile(1024px) {
        background: transparent;
    }
    .header-wrap {
        @include container(small);
        @include flex-x(between);
        @include media-query-mobile(768px) {
            @include container(medium);
        }
        @include media-query-mobile(1200px) {
            @include container(large);
        }
    }
    .logo {
        width: 67px;
        padding: 10px 0;
        @include media-query-mobile(1024px) {
            width: 80px;
        }
        img {
            width: 100%;
        }
    }
    .menu {
        position: relative;
        z-index: 5;
        @include media-query-mobile(1024px) {
            display: none;
        }
    }
    .desktop-nav {
        display: none;
        @include media-query-mobile(1024px) {
            position: relative;
            display: block;
            width: 100%;
            @include flex-x(center);
            ul:first-child {
                @include flex-x(center);
                @include center(y, absolute);
                font-family: $title;
                li {
                    padding: 0 15px;
                    letter-spacing: 2px;
                    a, a:visited {
                        color: $light;
                        font-size: 0.9375rem;
                        position: relative;
                        &:hover {
                            @include active-link();
                        }
                    }
                }
            }
            .social-links {
                @include center(y, absolute);
                right: 0;
                a, a:visited {
                    color: $black;
                }
                li {
                    @include social(32px, $white);
                    &:hover {
                        background: $secondary;
                    }
                }
            }
        }
    }
    .hamburger {
        @include center(y, relative);
    }
}
.header-active {
    .desktop-nav {
        a {
            color: $dark !important;
            font-weight: bold !important;
            &:hover {
                color: $primary !important;
            }
        }
        .social-links {
            li {
                background: $secondary;
                &:hover {
                    background: $dark;
                }
                i {
                    color: $white;
                }
            }
        }
    }
}
footer {
    padding-bottom: 0 !important;
    .newsletter {
        background: $primary;
        padding: 8rem 0 7rem 0;
        position: relative;
        .paint-stroke {
            top: -100px;
        }
        .section-wrap {
            padding-top: 0;
        }
        .heading {
            color: $white;
            text-align: center;
            @include media-query-mobile(1024px) {
                text-align: left;
                width: 50%;
            }
            h1 {
                font-family: $title;
                font-size: 38px;
                line-height: 1.2;
            }
            p {
                font-family: $text;
                font-weight: lighter;
                line-height: 1.85;
                font-size: 14.5px;
                padding: 1rem 0;
            }
        }
        form {
            @include media-query-mobile(1024px) {
                width: 50%;
                .section-wrap {
                    @include center(y, relative);
                }
            }
            button {
                margin-top: 20px;
                @include media-query-mobile(1024px) {
                    margin-top: 0;
                    margin-left: 20px;
                }
            }
        }
    }
    .info {
        background: $dark;
        color: $white;
        font-family: $text;
        letter-spacing: 1px;
        p, li {
            font-size: 0.9375rem;
        }
        a, a:visited {
            color: $light;
            @include media-query-mobile(1024px) {
                &:hover {
                    color: $primary;
                }
            }
        }
        .section-wrap {
            padding: 7.5rem 0;
            .footer-item {
                padding: 2rem 0;
                @include media-query-mobile(1024px) {
                    width: 248px;
                    justify-content: space-between !important;
                }
                span {
                    color: $secondary;
                    padding-right: 10px;
                }
                h2 {
                    font-family: $title;
                    padding-bottom: 1rem;
                    font-size: 19px;
                    @include media-query-mobile(1024px) {
                        padding-top: 20px;
                    }
                }
                ul {
                    li {
                        padding: 0.5rem 0;
                        color: $light;
                    }
                }
            }
            .logo {
                img {
                    width: 60px;
                    padding-bottom: 15px;
                }
                p {
                    line-height: 1.85;
                    color: $light;
                }
            }
        }
        .contact-info {
            padding-bottom: 2.6rem;
            position: relative;
            .section-wrap {
                text-align: center;
                color: $light;
                align-items: center;
                padding: 0;
                justify-content: space-between !important;
                z-index: 3;
                position: relative;
                p {
                    span {
                        color: $white;
                    }
                }
                ul {
                    @include flex-x(center);
                }
                .social-links {
                    padding: 1.5rem 0;
                    a, a:visited {
                        color: $black;
                    }
                    li {
                        @include social(32px, $white);
                        &:hover {
                            background: $secondary;
                        }
                    }
                }
                .footer-nav {
                    li + li {
                        padding-left: 10px;
                    }
                }
            }
        }
    }
}

